@@ -156,7 +156,7 @@ public interface FSConstants {
   // Version is reflected in the data storage file.
   // Versions are negative.
   // Decrement LAYOUT_VERSION to define a new version.
-  public static final int LAYOUT_VERSION = -7;
+  public static final int LAYOUT_VERSION = -8;
   // Current version: 
-  // Block Level CRCs added.
+  // added blocksize to inode
 }
